# evaluation-sandbox

./: LICENSE  README.md  data.jsonl  pyproject.toml
.devcontainer/: devcontainer.json
src/: batch.py  main.py  single.py
